--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <div id="player" style="width: 800px; height: 600px;">
     <div class="js-video-container" style="width: 100%; height: 100%"></div>
     <div style="background-color: black">
-      <button style="border-style: none; cursor: pointer; background-color: transparent"><i class="fa fa-play" aria-hidden="true" style="color: white"></i></button>
-      <button style="border-style: none; cursor: pointer; background-color: transparent"><i class="fa fa-pause" aria-hidden="true" style="color: white"></i></button>
+      <button class="js-play-button" style="border-style: none; cursor: pointer; background-color: transparent"><i class="fa fa-play" aria-hidden="true" style="color: white"></i></button>
+      <button class="js-pause-button" style="border-style: none; cursor: pointer; background-color: transparent"><i class="fa fa-pause" aria-hidden="true" style="color: white"></i></button>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
