--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
   <title>Пример подключения плеера</title>
   <script src="https://use.fontawesome.com/09424ece9f.js"></script>
   <meta charset="utf-8">
+  <style>
+    .control-button {
+      border-style: none;
+      cursor: pointer;
+      background-color: transparent
+    }
+    .control-button-icon {
+      color: white
+    }
+  </style>
 </head>
 <body>
   <div id="player" style="width: 800px; height: 600px;">
     <div class="js-video-container" style="width: 100%; height: 100%"></div>
     <div style="background-color: black">
-      <button class="js-play-button" style="border-style: none; cursor: pointer; background-color: transparent"><i class="fa fa-play" aria-hidden="true" style="color: white"></i></button>
-      <button class="js-pause-button" style="border-style: none; cursor: pointer; background-color: transparent"><i class="fa fa-pause" aria-hidden="true" style="color: white"></i></button>
+      <button class="js-play-button control-button"><i class="fa fa-play control-button-icon" aria-hidden="true"></i></button>
+      <button class="js-pause-button control-button"><i class="fa fa-pause control-button-icon" aria-hidden="true" style="color: white"></i></button>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
