Add shadow-box to video player

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <div id="player" style="width: 800px; height: 600px;">
+  <div id="player" style="width: 800px; height: 600px; box-shadow: 0 0 16px 8px rgba(0,0,0,0.6)">
     <div class="js-video-container" style="width: 100%; height: 100%"></div>
     <div style="background-color: black">
       <button class="js-play-button control-button"><i class="fa fa-play control-button-icon" aria-hidden="true"></i></button>
