--- a/index.html
+++ b/index.html
@@ -5,22 +5,34 @@
   <script src="https://use.fontawesome.com/09424ece9f.js"></script>
   <meta charset="utf-8">
   <style>
+    .player {
+      width: 800px;
+      height: 600px;
+      box-shadow: 0 0 12px 6px rgba(0,0,0,0.6);
+      display: flex;
+      flex-direction: column;
+    }
+    .video-container {
+      flex-grow: 1;
+    }
+    .controls-panel {
+      background-color: black;
+      flex-grow: 0;
+    }
     .control-button {
       border-style: none;
       cursor: pointer;
-      background-color: transparent
-    }
-    .control-button-icon {
-      color: white
+      color: white;
+      background-color: transparent;
     }
   </style>
 </head>
 <body>
-  <div id="player" style="width: 800px; height: 600px; box-shadow: 0 0 16px 8px rgba(0,0,0,0.6)">
-    <div class="js-video-container" style="width: 100%; height: 100%"></div>
-    <div style="background-color: black">
-      <button class="js-play-button control-button"><i class="fa fa-play control-button-icon" aria-hidden="true"></i></button>
-      <button class="js-pause-button control-button"><i class="fa fa-pause control-button-icon" aria-hidden="true" style="color: white"></i></button>
+  <div id="player" class="player">
+    <div class="js-video-container video-container"></div>
+    <div class="controls-panel">
+      <button class="js-play-button control-button"><i class="fa fa-play" aria-hidden="true"></i></button>
+      <button class="js-pause-button control-button"><i class="fa fa-pause" aria-hidden="true"></i></button>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
