--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <div class="controls-panel">
       <button class="js-play-button control-button"><i class="fa fa-play" aria-hidden="true"></i></button>
       <button class="js-pause-button control-button"><i class="fa fa-pause" aria-hidden="true"></i></button>
+      <button class="js-volume-button control-button"><i class="fa fa-volume-off" aria-hidden="true"></i></button>
+      <button class="js-mute-button control-button"><i class="fa fa-volume-up" aria-hidden="true"></i></button>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
