Make buttons larger, add margins, add full screen button

--- a/index.html
+++ b/index.html
@@ -18,12 +18,18 @@
     .controls-panel {
       background-color: black;
       flex-grow: 0;
+      display: flex;
     }
     .control-button {
       border-style: none;
       cursor: pointer;
       color: white;
       background-color: transparent;
+      font-size: 20px;
+      height: 25px;
+      width: 20px;
+      margin: 5px 0 5px 5px;
+      flex-grow: 0;
     }
   </style>
 </head>
@@ -35,6 +41,8 @@
       <button class="js-pause-button control-button"><i class="fa fa-pause" aria-hidden="true"></i></button>
       <button class="js-volume-button control-button"><i class="fa fa-volume-off" aria-hidden="true"></i></button>
       <button class="js-mute-button control-button"><i class="fa fa-volume-up" aria-hidden="true"></i></button>
+      <div style="flex-grow: 0.98"></div>
+      <button class="js-fullscreen-button control-button"><i class="fa fa-expand" aria-hidden="true"></i></button>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
