--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Пример подключения плеера</title>
-  <script src="https://use.fontawesome.com/09424ece9f.js"></script>
   <meta charset="utf-8">
+  <script src="https://use.fontawesome.com/09424ece9f.js"></script>
   <style>
     .player {
       width: 800px;
@@ -12,15 +12,15 @@
       display: flex;
       flex-direction: column;
     }
-    .video-container {
+    .player .video-container {
       flex-grow: 1;
     }
-    .controls-panel {
+    .player .controls-panel {
       background-color: black;
       flex-grow: 0;
       display: flex;
     }
-    .control-button {
+    .player .control-button {
       border-style: none;
       cursor: pointer;
       color: white;
