--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <title>Пример подключения плеера</title>
   <meta charset="utf-8">
-  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-  <link rel="manifest" href="favicon/site.webmanifest">
-  <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+  <link rel="manifest" href="assets/favicon/site.webmanifest">
+  <link rel="mask-icon" href="assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
   <script src="https://use.fontawesome.com/09424ece9f.js"></script>
@@ -24,8 +24,11 @@
     }
     .player .controls-panel {
       background-color: black;
-      flex-grow: 0;
       display: flex;
+      align-items: center;
+    }
+    .player .progress-panel {
+      flex-grow: 1;
     }
     .player .control-button {
       border-style: none;
@@ -33,10 +36,8 @@
       color: white;
       background-color: transparent;
       font-size: 20px;
-      height: 25px;
-      width: 20px;
-      margin: 5px 0 5px 5px;
-      flex-grow: 0;
+      height: 35px;
+      width: 35px;
     }
   </style>
 </head>
@@ -48,7 +49,7 @@
       <button class="js-pause-button control-button"><i class="fa fa-pause" aria-hidden="true"></i></button>
       <button class="js-volume-button control-button"><i class="fa fa-volume-off" aria-hidden="true"></i></button>
       <button class="js-mute-button control-button"><i class="fa fa-volume-up" aria-hidden="true"></i></button>
-      <div style="flex-grow: 0.98"></div>
+      <div class="progress-panel"></div>
       <button class="js-fullscreen-button control-button"><i class="fa fa-expand" aria-hidden="true"></i></button>
     </div>
   </div>
