--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     }
     .player .progress-panel {
       flex-grow: 1;
+      align-items: center;
     }
     .player .control-button {
       border-style: none;
@@ -49,7 +50,11 @@
       <button class="js-pause-button control-button"><i class="fa fa-pause" aria-hidden="true"></i></button>
       <button class="js-volume-button control-button"><i class="fa fa-volume-off" aria-hidden="true"></i></button>
       <button class="js-mute-button control-button"><i class="fa fa-volume-up" aria-hidden="true"></i></button>
-      <div class="progress-panel"></div>
+      <div class="progress-panel" style="color: white;">
+        <span class="js-current-time"></span>
+        —
+        <span class="js-duration"></span>
+      </div>
       <button class="js-fullscreen-button control-button"><i class="fa fa-expand" aria-hidden="true"></i></button>
     </div>
   </div>
