Normalize css, set buttons focus outline: none

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
   <script src="https://use.fontawesome.com/09424ece9f.js"></script>
@@ -47,6 +48,7 @@
       margin-right: 10px;
       margin-left: 10px;
       cursor: pointer;
+      height: 20px;
     }
     .player .progress-slider {
       background-color: red;
@@ -79,6 +81,9 @@
       width: 36px;
       margin-right: 1px;
     }
+    .player .control-button:focus {
+      outline: none;
+    }
   </style>
 </head>
 <body>
@@ -102,7 +107,7 @@
   </div>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://unpkg.com/playable@2.10.3/dist/statics/playable.bundle.min.js"></script>
-  <script src="player.js"></script>
+  <script src="assets/js/player.js"></script>
 
   <script type="text/javascript">
     createPlayer({elementId: 'player'});
