Add margins to video player

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       display: flex;
       flex-direction: column;
       background-color: black;
+      margin-left: 8px;
+      margin-top: 8px;
     }
     .player .video-container {
       flex-grow: 1;
